using UnityEngine;

public class StringTagManager : MonoBehaviour
{
    public const string tagPlayer = "Player";
    public const string tagHeroBody = "HeroBody";
    public const string tagMainCamera = "MainCamera";
    public const string tagMainCameraChildren = "MainCameraChildren";
    public const string tagPathfinding = "Pathfinding";
    public const string tagNode = "Node";

    public const string maskShootable = "Shootable";

    public const string animAttack = "Attack";
    public const string animDead = "Dead";
    public const string animPickUp = "PickUp";
    public const string animReload = "Reload";
    public const string animWalking = "Walking";
    public const string animRunning = "Running";

    public const string animIdleRotate = "IdleRotate";
    public const string animShooting = "Shooting";
    public const string animShootingSec = "ShootingSec";
    public const string animMoving = "Moving";
    public const string animMovingRun = "MovingRun";
    public const string animMultiTool = "MultiTool";
    public const string animVacuum = "Vacuum";
    public const string animParticle = "Particle";
    public const string animElectricCharger = "ElectricCharger";
    public const string animForward = "Forward";
    public const string animStrafe = "Strafe";
}
